# Techniker_23-24_Schaltjahr

./: CMakeLists.txt  main.c
